z-index fixes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -200,7 +200,7 @@ aside nav {
     width: 150px;
     position: sticky;
     top: 12px;
-    z-index: 999;
+    z-index: 99;
 }
 
 figcaption {
@@ -417,7 +417,7 @@ footer .right {
     header {
         position: sticky;
         top: 0;
-        z-index: 999;
+        z-index: 99;
         align-self: flex-start;
     }
 
